// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewerSurveySchema should fail validation when fields missing 1`] = `
Object {
  "questions": [ValidatorError: Path \`questions\` is required.],
}
`;

exports[`ReviewerSurveySchema should fail validation when multiple-choice question is missing options 1`] = `"Validation failed: questions: Options is required when type is multiple-choice"`;

exports[`ReviewerSurveySchema should fail validation when question is missing slug 1`] = `"Validation failed: questions.0.slug: Path \`slug\` is required."`;

exports[`ReviewerSurveySchema should fail validation when question options not a number 1`] = `
Object {
  "questions": [Error: Options is required when type is multiple-choice],
  "questions.0.options": [CastError: Cast to Number failed for value "hola" at path "options"],
}
`;

exports[`ReviewerSurveySchema should fail validation when wrong type 1`] = `
Object {
  "questions.0.type": [ValidatorError: \`other\` is not a valid enum value for path \`type\`.],
}
`;
